v21:
- Fix icerbox.com
- Add hotlink.cc
- Fix sort by Plugin/Premium Account Name in AdminCP
- Remove catshare.net, tenlua.vn
v20:
- Fix uptobox.com
v19:
- Fix depositfiles.com, hitfile.net, novafile.com, uploadgig.com
- Reformat code
v18:
- Update k2s.cc
- Add option not filter cookie when save cookie
- Update checkaccount.php
- Support vinaget url:port
v17:
- Update upfile.vn, prefiles.com
v16:
- Fix html footer
- Update icerbox.com
v15:
- Update 1fichier.com
- Fix icerbox.com
- Update class.php
v14:
- Upgrade to vinaget 2.7.0 rev.94
v13:
- Remove died hosts
- Update chiasenhac.vn, hitfile.net, datafile.com
- Restyle all code hosts
- Support prefix domain host
v12:
- Update prefiles.com
v11:
- Add Hitfile.net
- Update fshare.vn
- Update class.php - worked with PHP 7
- Update uptobox.com
v10:
- Update datafile.com: require chmod 666 datafile_descrypt.html
- Update fshare.vn
- Update README.md
- Support quick link in ads shorten link service
v9:
- Add Uploadgig.com
- Change up.4share.vn to 4share.vn
- Change keep2share.cc, keep2s.cc to k2s.cc
- Updated Novafile.com, Subyshare.com, Katfile.com, Share-online.biz, Yunfile.com
- Updated GetCookies, GetAllCookies in class.php
v8:
- Change code rapidgator.net
- Fix fshare.vn
- Updated depfile.us
v7:
- Fixed uploaded.net
- Change depfile.com to depfile.us
- Updated depfile.us
v6:
- Support mega.nz
- Small bugs fixes
v5:
- Add depfile.us
- Updated extmatrix.com, rapidgator.net, depfile.com
- Add class passredirect in class.php
- Miss function delete account die in checkaccount.php
v4:
- Updated 1fichier.com, rapidgator.net
- Fixed get wrong filename of download link
- Added function not delete account die in menu check account
- Fixed non-static class in class.php
- Added prefiles.com, filejoker.net
- Change to version 3.3 LTS
v3:
- Fixed overflow table admin cookie, account, checkacc
- Updated alfafile.net, filefactory.com, depositfiles.com, yunfile.com, katfile.com, catshare.net, turbobit.net, rapidgator.net
v2: